<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="195dp"
        android:layout_height="69dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/Log"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputemail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputemail"
        app:layout_constraintTop_toBottomOf="@+id/inputemail" />

    <Button
        android:id="@+id/login"
        android:layout_width="125dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_bg"
        android:text="@string/Log"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/inputpassword"
        app:layout_constraintStart_toStartOf="@+id/inputpassword"
        app:layout_constraintTop_toBottomOf="@+id/inputpassword" />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password ?"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/createaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CREATE AN ACCOUNT"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/inputpassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputpassword"
        app:layout_constraintTop_toBottomOf="@+id/inputpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>